# openeo_dedl_plugin

./: .gitignore  README.md  __init__.py  demonstration.ipynb  discovery.py  env_installation_insula.sh  local_loader.py  pyproject.toml  s3_olci_discovery.py  sen3.py
src/openeo_dedl_plugin/: __init__.py  local_loader.py  metop_som25.py  metop_somo25.py  metop_somo25_discovery.py  msg_seviri.py  msg_seviri_discovery.py  s3_olci_discovery.py  sen3.py
