[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openeo-dedl-plugin"
version = "0.1.0"
description = "DEDL / EUMETSAT data plugin for openeo-python-client local backend"
authors = [
  { name = "Suriyah Dhinakaran", email = "sdhinakaran@eurac.edu" }
]
requires-python = ">=3.8"
dependencies = [
  "xarray",
  "rioxarray",
  "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
